# homelab-utils

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
crates/hlu-core/: Cargo.toml
crates/hlu-core/src/: error.rs  lib.rs  model.rs  paths.rs  store.rs
crates/hlu-desktop/: index.html  package-lock.json  package.json  vite.config.ts
crates/hlu-desktop/scripts/: make-icon.cjs
crates/hlu-desktop/src/: App.tsx  api.ts  format.ts  icons.tsx  styles.css  types.ts  updater.ts
crates/hlu-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/hlu-desktop/src-tauri/capabilities/: default.json
crates/hlu-desktop/src-tauri/icons/: icon.icns
crates/hlu-desktop/src-tauri/src/: clipboard.rs  commands.rs  crypto.rs  lib.rs  main.rs  state.rs  terminals.rs
crates/hlu-desktop/src/components/: UpdateBanner.tsx
crates/hlu-desktop/src/views/: DevicesView.tsx  PortsView.tsx  SettingsView.tsx  ToolPlaceholder.tsx
crates/hlu-discover-cli/: Cargo.toml
crates/hlu-discover-cli/src/: main.rs
crates/hlu-discovery/: Cargo.toml
crates/hlu-discovery/src/: arp.rs  lib.rs  mdns.rs  oui.rs  portscan.rs  rdns.rs  ssh.rs  subnet.rs  sweep.rs
