[package]
name = "hlu-core"
description = "Shared domain model and persistence for homelab-utils."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
directories = "6.0.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[package.metadata.dist]
dist = false
