[package]
name = "hlu-discover-cli"
description = "Standalone command-line LAN discovery tool for homelab-utils."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "hlu-discover"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
# Text-only clipboard: default-features=false drops the image-data tree (image/png/moxcms).
arboard = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
hlu-core.workspace = true
hlu-discovery.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true

# Modern Wayland compositors need this backend for clipboard set to work.
[target.'cfg(target_os = "linux")'.dependencies]
arboard = { workspace = true, features = ["wayland-data-control"] }
