[package]
name = "hlu-desktop"
description = "homelab-utils desktop app — discover, name, and connect to your homelab."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
default-run = "hlu-desktop"

# A lib (the app logic + Tauri commands) plus a thin bin, so the package stays workspace-friendly.
[lib]
name = "hlu_desktop_lib"
path = "src/lib.rs"

[[bin]]
name = "hlu-desktop"
path = "src/main.rs"

[lints]
workspace = true

# The desktop app is released via tauri-action (bundles + updater), not cargo-dist.
[package.metadata.dist]
dist = false

[build-dependencies]
tauri-build = "2.6.3"

[dependencies]
hlu-core.workspace = true
hlu-discovery.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = "2.11.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
